<?xml version="1.0"?>
<package format="2">
    <name>gunrobo_description</name>
    <version>0.0.1</version>
    <description>The gunrobo_description package</description>
    <maintainer email="todo@sample.com">kutei</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>xacro</depend>
</package>
